1999-09-14  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/Makefile.am (libcamel_la_SOURCES): 
	added camel-folder-pt-proxy.[ch] to the build
	process.

	* camel/camel-folder-pt-proxy.c (_init_with_store): 
	started implementation of the pthread-based 
	folder proxy.
	

1999-09-08  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/providers/MH/mh-summary.c 
	(mh_load_summary): 
	(mh_save_summary): 
	(mh_create_summary): 
	implemented summary (files) for MH folders.
	
	* camel/providers/MH/camel-mh-folder.c 
	(_get_message_by_uid): implemented.
	(camel_mh_folder_class_init): 
	(_get_message_uid): implemented

	* camel/camel-folder.c (camel_folder_has_uid_capability): 
	(camel_folder_get_message_uid): 
	(camel_folder_get_message_uid_by_number): 
	(camel_folder_get_message_by_uid): 
	(camel_folder_get_uid_list): 
	Documented UID methods.
	(camel_folder_get_message_uid_by_number): 
	const'ified uid.
	(camel_folder_get_message_by_uid): idem
	removed stupid camel_folder_get_message_uid_by_number
	method.
	
	* tests/ui-tests/store_listing.c (close_all): 
	close all open folders and stores. (necessary
	for UID list saving ).

	* camel/providers/MH/mh-uid.c (mh_generate_uid_list): 
	fix: store UID list in CamelMHFolder object.

	* camel/providers/MH/camel-mh-folder.c (_open): 
	read or create UID list.
	(_close): save UID list.

1999-09-07  bertrand  <Bertrand.Guiheneuf@aful.org>

	* camel/md5-utils.c (md5_get_digest_from_file): 
	correct parameter decl (const)

	* camel/md5-utils.h: typo.

	* camel/providers/MH/mh-uid.c 
	More work on UID stuff for MH.
	(mh_save_uid_list): 
	(mh_load_uid_list): 
	(mh_generate_uid_list): 
	new funcs. Manage on-disk uid list.
	
	* camel/providers/MH/mh-utils.c (mh_is_a_message_file): 
	Util routines live here now.

	* camel/md5-utils.c 
	Documented all funcs.
	
	(md5_get_digest_from_stream): 
	correct typo.
	(md5_get_digest_from_file): 
	same typo corrected.
	

	* camel/md5-utils.h : 
	raw routines are declared public now.