@@ -1,3 +1,10 @@
+1999-09-17  bertrand  <Bertrand.Guiheneuf@aful.org>
+
+	* camel/camel-op-queue.h: 
+	* camel/camel-op-queue.c: 
+	New object. Operation queue. Meant to be used in 
+	non-blocking proxy objects.
+	
 1999-09-14  bertrand  <Bertrand.Guiheneuf@aful.org>
 
 	* camel/Makefile.am (libcamel_la_SOURCES): 
